--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,7 +99,7 @@
 
         </RelativeLayout>
 
-        <TextView
+        <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,7 +107,6 @@
             android:layout_marginLeft="62dp"
             android:layout_marginTop="18.7dp"
             android:layout_marginRight="62dp"
-            android:background="@drawable/login_blue_fill__rounded_color"
             android:gravity="center"
             android:paddingTop="14dp"
             android:paddingBottom="14dp"
@@ -131,11 +130,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="12dp"
-            android:onClick="clickSignin"
             android:text="회원가입"
             android:textColor="#1566e0"
             android:textSize="10.5sp" />
-
 
 
             <TextView
@@ -147,7 +144,6 @@
                 android:text="소셜 로그인으로 시작하기"
                 android:textColor="#aeaeae"
                 android:textSize="13.3sp"/>
-
 
             <Button
                 android:id="@+id/btn_google_login"
